fixed alignment issues

--- a/custom.scss
+++ b/custom.scss
@@ -26,7 +26,7 @@ font-family: 'Lato', sans-serif; */
 body {
   font-family: $default-font;
   color: $text-colour;
-  font-size: 11pt;
+  font-size: 10pt;
   // background-color: $background-color;
 }
 
@@ -44,6 +44,7 @@ body {
   font-family: $default-font;
   color: $heading-colour;
   font-size: 3em;
+  margin-top: 0rem;
 }
 
 .section__title {
@@ -92,7 +93,7 @@ h4 {
 }
 
 h1 {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .job__title {
@@ -122,8 +123,8 @@ h1 {
 
 .project {
   display: flex;
-  flex-direction: row;
-  margin: 0 0 0.5rem 0;
+  flex-direction: column;
+  margin-bottom: 0.5rem;
 }
 
 .education {
@@ -216,12 +217,6 @@ h1 {
   50% {
     color: black;
   }
-}
-
-.project {
-  display: flex;
-  flex-direction: column;
-  margin: 1.5rem 0;
 }
 
 .project__skills {
